src/objects/Admission__c.object
<CustomObject>
    <description>Object for Admissions to do the manual stop and validate information</description>
    <fields>
        <fullName>ADIAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A field to check once the ADI has been received/updated in salesforce.</description>
        <label>ADI Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADIStatus__c</fullName>
        <label>ADIStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADMTReady__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADMT Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdmissionReview__c</fullName>
        <label>Admission Review</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Admissions</relationshipLabel>
        <relationshipName>Admissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AutoAdmitStatus__c</fullName>
        <formula>CASE(StatusValue__c,
1, &apos;AAMT&apos;,
2, &apos;PEND&apos;,
3, &apos;ADMT&apos;,
4, &apos;NAYT&apos;,
NULL)</formula>
        <label>Auto Admit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSPRNDocs__c</fullName>
        <label>BSPRN Docs</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClearedReady__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This student meets the requirements to be cleared</inlineHelpText>
        <label>This prospect has been Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CollegeExperience__c</fullName>
        <formula>TEXT( AdmissionReview__r.PriorCollegeExperience__c )</formula>
        <label>College Experience</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentsConcerningStudent__c</fullName>
        <label>Comments Concerning this Student</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed1stCall__c</fullName>
        <formula>AdmissionReview__r.LastActivityDate - 7</formula>
        <label>Completed 1st Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ECRanking__c</fullName>
        <formula>TEXT( AdmissionReview__r.ECRank__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EC Ranking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECRecommendation__c</fullName>
        <label>EC Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Recommendation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FirstCallCompleted__c</fullName>
        <label>1st Call Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FitEssay__c</fullName>
        <label>Fit Essay</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOU__c</fullName>
        <label>MOU</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NativeLanguageIsEnglish__c</fullName>
        <description>Formula field that brings over the value from the CARE Profile NativeLanguageIsEnglish__c field.</description>
        <formula>AdmissionReview__r.NativeLanguageIsEnglish__c</formula>
        <label>Native Language is English</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotAdmitDecisionConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Admit Decision Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this Admission record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PracticumAgreement__c</fullName>
        <label>Practicum Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreReqsReceived__c</fullName>
        <formula>AdmissionReview__r.PreReqsHaveBeenReceived__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Reqs Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreReqsVerified__c</fullName>
        <label>Pre-Reqs Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PriorCollegeExperience__c</fullName>
        <label>Prior College Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Or</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProgramSpecificRequirements_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Yes- WGU Program Specific Admissions Criteria met</description>
        <inlineHelpText>Yes- WGU Program Specific Admissions Criteria met</inlineHelpText>
        <label>Program Specific Requirements Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProspectREDI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A field to denote that the prospect is at REDI</description>
        <label>ProspectREDI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RAStatus__c</fullName>
        <formula>AdmissionReview__r.ApplicationPin__c</formula>
        <label>RAStatus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RNLicenseVerification__c</fullName>
        <label>RN License Verification</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReadinessAssessmentEval__c</fullName>
        <formula>WorkExperience__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Readiness Assessment Evaluation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadinessAssessment__c</fullName>
        <label>Readiness Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Passed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReadyForPackaging__c</fullName>
        <label>Ready for Packaging</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <formula>TEXT(AdmissionReview__r.ECRecommendation__c)</formula>
        <label>Recommendation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelevantWorkExperience__c</fullName>
        <label>Relevant Work Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Verify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StatusValue__c</fullName>
        <label>StatusValue</label>
        <summarizedField>AdmissionsDecisionInformation__c.StatusValue__c</summarizedField>
        <summaryFilterItems>
            <field>AdmissionsDecisionInformation__c.StatusValue__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>AdmissionsDecisionInformation__c.Admission__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TOEFL__c</fullName>
        <description>Formula field that brings over the TOEFL information from the CARE Profile.</description>
        <formula>AdmissionReview__r.TOEFL__c</formula>
        <label>TOEFL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeachingLicense__c</fullName>
        <label>Teaching License</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TimeCommitment__c</fullName>
        <formula>TEXT(AdmissionReview__r.TimeCommitment__c)</formula>
        <label>Time Commitment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptContentEvaluation__c</fullName>
        <label>Transcript/Content Evaluation</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TranscriptPreReqsSatisfied__c</fullName>
        <formula>AdmissionReview__r.TranscriptPreReqsSatisfied__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript Pre-Reqs Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransferCredit__c</fullName>
        <label>Transfer Credit</label>
        <picklist>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Verify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnderstandTimeCommitment__c</fullName>
        <inlineHelpText>Commits to 15-20 hours/week minimum</inlineHelpText>
        <label>Understand Time Commitment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnderstandTimeToCompletion__c</fullName>
        <label>Understand Time to Completion</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WorkExperience__c</fullName>
        <formula>TEXT( AdmissionReview__r.RelevantWorkExperience__c )</formula>
        <label>Work Experience</label>
        <type>Text</type>
    </fields>
    <label>Admission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{00}</displayFormat>
        <label>Date Reviewed</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>